java bob exercise use isBlank instead of isEmpty